# amel

./: Cargo.toml
crates/amel_app/: Cargo.toml
crates/amel_app/src/: app_runner.rs  device.rs  lib.rs  window.rs
crates/amel_app/src/config/: app_config.rs  device_config.rs  mod.rs  window_config.rs
crates/amel_app/src/window/: frame_counter.rs  mod.rs  surface.rs
crates/amel_gpu/: Cargo.toml
crates/amel_gpu/src/: lib.rs  pass.rs
crates/amel_gpu/src/bind/: bind_group_builder.rs  bind_group_layout_builder.rs  mod.rs
crates/amel_gpu/src/buffer/: buffer_builder.rs  dynamic_uniform_buffer.rs  mod.rs
crates/amel_gpu/src/pipeline/: mod.rs  pipeline_builder.rs  pipeline_layout_builder.rs  pipeline_trait.rs  render_target.rs
crates/amel_gpu/src/pipeline/state/: depth_stencil_state.rs  fragment_state.rs  mod.rs  vertex_state.rs
crates/amel_gpu/src/texture/: mod.rs  sampler_builder.rs  texture_builder.rs  texture_view_builder.rs
crates/amel_math/: Cargo.toml
crates/amel_math/src/: lib.rs  matrix_stack.rs
crates/amel_math/src/primitive/: mod.rs
crates/amel_math/src/primitive/dim2/: circle.rs  ellipse.rs  mod.rs  polyline2d.rs  rectangle.rs  regular_polygon.rs  segment2d.rs  triangle2d.rs
crates/amel_math/src/primitive/dim3/: cuboid.rs  cylinder.rs  mod.rs  sphere.rs
crates/amel_mesh/: Cargo.toml
crates/amel_mesh/src/: attribute.rs  conversion.rs  gpu_mesh.rs  indices.rs  lib.rs  mesh.rs  vertex.rs
crates/amel_mesh/src/primitive/: mod.rs
crates/amel_mesh/src/primitive/dim2/: circle.rs  ellipse.rs  mod.rs  polyline2d.rs  rectangle.rs  regular_polygon.rs  segment2d.rs  triangle2d.rs
crates/amel_mesh/src/primitive/dim3/: cuboid.rs  mod.rs  sphere.rs
crates/amel_renderer/: Cargo.toml
crates/amel_renderer/src/: lib.rs  render_context.rs  render_resources.rs  render_target.rs  renderer.rs  screen_renderer.rs
crates/amel_renderer/src/pipeline/: mod.rs
crates/amel_renderer/src/pipeline/default/: default.wgsl  mod.rs
crates/amel_renderer/src/render_target/: mod.rs  screen_render_target.rs
crates/amel_renderer/src/renderer/: mod.rs
src/: framework.rs  main.rs
